[package]
description = "一些常用的api集合"
documentation = "https://docs.rs/public-api-rs"
edition = "2021"
license = "Apache-2.0"
name = "public-api-rs"
readme = "README.md"
repository = "https://github.com/zzliujianbo/public-api-rs"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
lazy_static = "1.0"
regex = "1.0"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4.2"
